fix: height overflow bug

--- a/dashboard/styles.css
+++ b/dashboard/styles.css
@@ -68,7 +68,8 @@ body {
     color: var(--text-color);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
-
+    box-sizing: border-box;
+    height:100vh;
 }
 
 a {
@@ -106,6 +107,7 @@ a:visited {
 .col{
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .row{
@@ -166,7 +168,7 @@ a:visited {
 
 .dashboard {
 display: flex;
-height: 100vh;
+height: 100%;
 width: 100vw;
 
 }
@@ -175,7 +177,7 @@ width: 100vw;
     flex: 1;
     background-color: var(--primary-color);
     color: var(--text-color-light);
-    height: 100vh;
+    height: 115%;
 }
 
 .dashboard-image {
@@ -187,7 +189,6 @@ width: 100vw;
 
 .content {
     flex: 5;
-    height: 100vh;
 } 
 
 .navbar {
@@ -255,6 +256,7 @@ width: 100vw;
     padding: 0 1rem;
     width: 100%;
     height: 70%;
+    margin-top: 1rem;
 }
 
 .profile-section-two {
@@ -294,9 +296,14 @@ width: 100vw;
     color: var(--primary-color);
     font-size: 4rem;
 }
+
+#menu {
+    display: none;
+    cursor: pointer;
+}
 .user-area {
     background-color: var(--secondary-color);
-    height: 90vh;
+    height: 100%;
     display: flex;
 }
 
@@ -310,7 +317,17 @@ width: 100vw;
     margin-right: auto;
     padding-right: 1rem;
   }
-  
+  .project-actions {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    align-items: center;
+    justify-content:end;
+  }
+  .project-actions span {
+    cursor: pointer;
+    color: var(--primary-color);
+  }
   .project-card {
     display: flex;
     flex-direction: column;
@@ -363,11 +380,19 @@ width: 100vw;
     }
 
     .share-section {
+        display: none;
         flex-direction: column;
         position: absolute;
         top: 10%;
         gap: 0.5rem;
         right: 0%;
+        transition: opacity 0.3s ease;
     }
 
+    #menu {
+        display: block;
+        position: absolute;
+        top: 20%;
+        right: 0%;
+    }
 }
